--- a/Utal-reservas/login-and-registration/composer.json
+++ b/Utal-reservas/login-and-registration/composer.json
@@ -9,9 +9,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.2",
-        "spatie/laravel-permission": "^5.10"
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
